src/linting_errors/pretty/tests/snapshots/conventional_commits_linter__linting_errors__pretty__tests__test_pretty_print_case_2.snap
---
source: src/linting_errors/pretty/tests/mod.rs
expression: pretty_print
---
[1;31mMessage[0m - "Release 1.0.126"
	[1;31mX[0m - Commit title does not comply with the Conventional Commits V1.0.0 specification.


