src/linting_errors/pretty/tests/snapshots/conventional_commits_linter__linting_errors__pretty__tests__test_pretty_print_commit_title_too_long_case_1.snap
---
source: src/linting_errors/pretty/tests/mod.rs
expression: pretty_print
---
[1;31mMessage[0m - "feat: add new feature"
	[1;31mX[0m - Commit title is longer than the maximum allowed length.
